[package]
name = "p2p_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "^0.56.0", features = ["tcp", "noise", "yamux", "tokio", "ping"] }
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"
libp2p-noise = "0.46.1"
libp2p-tcp = "0.44.0"
libp2p-yamux = "0.47.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
